fix(mobile) Floating button covered

--- a/tau/src/css/profile/mobile/changeable/common/floatingactions.less
+++ b/tau/src/css/profile/mobile/changeable/common/floatingactions.less
@@ -1,4 +1,7 @@
-.ui-content .ui-floatingactions {
+/*style floatingaction button also when it apears after content,
+same as it appears in content*/
+.ui-content .ui-floatingactions,
+.ui-content  + .ui-floatingactions {
 	background-color: @color_floatingactions_bg;
 
 	.ui-btn {
