--- a/tau/src/css/profile/mobile/changeable/common/indexscrollbar.less
+++ b/tau/src/css/profile/mobile/changeable/common/indexscrollbar.less
@@ -36,14 +36,14 @@
 			width: 100%;
 			text-align: center;
 			font-size: @font_size_fastscroll_rollover_text;
-			min-height: 40 * @unit_base;
-			max-height: 40 * @unit_base;
 			font-weight: bold;
 			border-bottom: 2 * @unit_base solid @color_indexscrollbar_divider;
 			border-left: 2 * @unit_base solid @color_indexscrollbar_line;
 			.flex(1);
 			.justify-content(center);
 			.align-items(center);
+			max-height: 40 * @unit_base;
+			min-height: 40 * @unit_base;
 		}
 		li.ui-state-selected {
 			border-left: 2 * @px_base solid @color_indexscrollbar_divider;
@@ -68,6 +68,7 @@
 			.display-flex();
 			.flex(1);
 			pointer-events: none;
+			flex-basis: auto;
 		}
 	}
 	ul.ui-indexscrollbar-supplementary {
@@ -80,12 +81,19 @@
 		}
 		li.ui-state-selected {
 		}
+	}
 
+	.ui-indexscrollbar-margin {
+		width: 20px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		border-left: 2 * @unit_base solid @color_indexscrollbar_line;
 	}
 
 	& + .ui-listview li {
 		padding-right: 40 * @unit_base;
-    }
+	}
 }
 
 .ui-indexscrollbar-indicator {
